--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             </intent-filter>
         </activity>
 
+
+        <activity android:name=".DetailsActivity" android:exported="false"/>
     </application>
 
 </manifest>
